# pytorch-dl-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
configs/: 01_linear_regression.yaml  02_mlp_mnist.yaml  03_cnn_fashion_mnist.yaml
data/test/: bike_sharing_demand.csv  newsgroup_sentences.txt
notebooks/: 01_tensor_practice.ipynb  02_data_as_tensors.ipynb  03_linear_regression.ipynb  04_mlp_mnist.ipynb  05_mlp_vs_cnn.ipynb  06_simple_rnn.ipynb  07_imdb_lstm.ipynb  08_reverser_seq2seq.ipynb  09_translator_seq2seq.ipynb
notebooks/templates/: model_template.ipynb
src/dl_roadmap/: __init__.py
src/dl_roadmap/data/: __init__.py  lang.py  synthetic_regression.py  train_test_split.py
src/dl_roadmap/engine/: __init__.py  class_predictor.py  trainer.py
src/dl_roadmap/engine/trainers/: __init__.py  teacher_forced.py
src/dl_roadmap/metrics/: __init__.py  classification.py
src/dl_roadmap/models/: __init__.py  cnn_fashion_mnist.py  mlp_mnist.py
src/dl_roadmap/training/: __init__.py  train_cnn_fashion_mnist.py  train_linear_regression.py  train_mlp_mnist.py
src/dl_roadmap/utils/: __init__.py  config.py  logger.py  model_io.py  notify.py  seed.py
src/dl_roadmap/visualization/: __init__.py  palettes.py  plot_attention_matrix.py  plot_confusion_matrix.py  plot_training_history.py
