[project]
name = "dl_roadmap"
version = "0.1.0"
description = "A Python project starter template with pre-configured tools"
authors = [{ name = "NKTKLN", email = "nktkln@nktkln.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "torch>=2.12.1",
  "torchaudio>=2.11.0",
  "torchvision>=0.27.1",
  "ipywidgets (>=8.1.7,<9.0.0)",
  "jupyterlab-widgets (>=3.0.15,<4.0.0)",
  "iprogress (>=0.4,<0.5)",
  "nbformat (>=5.10.4,<6.0.0)",
  "tqdm>=4.67.1,<5.0.0",
  "colorama (>=0.4.6,<0.5.0)",
  "numpy>=2.5.0",
  "pandas>=3.0.3",
  "matplotlib>=3.11.0",
  "scikit-learn>=1.9.0",
  "pyyaml>=6.0.3",
  "appnope>=0.1.4",
  "debugpy>=1.8.21",
  "ipykernel>=7.3.0",
  "jupyter-client>=8.9.1",
  "nest-asyncio2>=1.7.2",
  "pyzmq>=27.1.0",
  "tornado>=6.5.7",
  "loguru>=0.7.3",
  "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
  "ruff>=0.15.1",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "coverage>=7.13.4",
  "pip-audit>=2.10.0",
  "deptry>=0.24.0",
  "commitizen>=4.13.7",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dl_roadmap"]

[tool.hatch.build.targets.sdist]
include = ["src/dl_roadmap", "README.md", "pyproject.toml"]

[tool.hatch.build]
exclude = [
  "/.github",
  "/.venv",
  "/tmp",
  "/dist",
  "/build",
  "**/__pycache__",
  "**/*.pyc",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-include = ["*.ipynb"]
exclude = [".git", "__pycache__", "build", "dist", ".venv", "tmp", "notebooks/templates"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "B", "B9", "C90", "S", "UP", "SIM", "PL", "RUF", "ARG", "PTH"]
ignore = ["E203", "D100", "B905"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "D", "PLR2004"]  # assert, docstrings, magic values in tests
"**/*.ipynb" = ["T201"]                   # print

[tool.mypy]
mypy_path = ["src"]
files = ["src", "tests"]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
strict_optional = true
disallow_untyped_calls = true
exclude = [".git", "__pycache__", "build", "dist", ".venv", "tmp", "notebooks/templates"]

[[tool.mypy.overrides]]
module = "seaborn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["dl_roadmap"]
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.deptry]
known_first_party = ["dl_roadmap"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
